src/objects/Constants__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <fields>
        <fullName>Advertiser_Record_Type__c</fullName>
        <defaultValue>&apos;Advertiser&apos;</defaultValue>
        <label>Advertiser Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agency_Record_Type__c</fullName>
        <defaultValue>&apos;Agency&apos;</defaultValue>
        <label>Agency Record Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Creative_Snapshot_URL__c</fullName>
        <defaultValue>&apos;http://www.addynamix.co.uk/Press/Alerts/CreativeSnapshot.aspx&apos;</defaultValue>
        <description>This URL will be used to display the Advert from the Account Page.</description>
        <label>Creative Snapshot URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CustomerRef1email__c</fullName>
        <label>CustomerRef1email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CustomerRef2email__c</fullName>
        <defaultValue>&apos;o2.generic@cloudsensesolutions.com&apos;</defaultValue>
        <label>CustomerRef2email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CustomerRef3email__c</fullName>
        <defaultValue>&apos;o2.generic@cloudsensesolutions.com&apos;</defaultValue>
        <label>CustomerRef3email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Media_Lead_Opp_Record_Type__c</fullName>
        <defaultValue>&apos;Media_Opportunities&apos;</defaultValue>
        <label>Media Lead Opp Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Media_Partner_Record_Type__c</fullName>
        <defaultValue>&apos;Media_Partner&apos;</defaultValue>
        <label>Media Partner Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Auto_UnFollow_Threshold__c</fullName>
        <inlineHelpText>max number of records user can be subscribed to before Opportunity Auto-Un-Follow logic kicks in</inlineHelpText>
        <label>Opportunity Auto UnFollow Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Regular_Opp_Record_Type__c</fullName>
        <defaultValue>&apos;New_Business&apos;</defaultValue>
        <label>Regular Opp Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wowcher_Lead_Owner__c</fullName>
        <defaultValue>&apos;Julian Boardman&apos;</defaultValue>
        <description>Wowcher Lead Owner will be used if the Lead has no activities after a period of time.</description>
        <label>Wowcher Lead Owner</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Constants</label>
</CustomObject>